<resources>
    <string name="app_name">BK Wallet</string>
    <string name="nav_logout">Log out</string>

    <string name="action_scan">Scanner</string>

    <!--those strings are for authentication layout-->
    <string name="server_client_id">829138065824-dp8j226v2s381ghh85qkbdrru2hnkc2k.apps.googleusercontent.com</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="login">Log in</string>
    <string name="loginFacebook">Log in with FaceBook</string>
    <string name="loginGoogle">Log in with Google</string>
    <string name="Or">Others Ways</string>
    <string name="retrievePassword">Retrieve Password?</string>
    <string name="signUp">Sign Up</string>
    <string name="error_Login">Log In fail. Something is wrong !!!</string>
    <string name="error_Toast">Missing </string>
    <string name="error_ConfirmPassword">Your confirm password does not match</string>
    <string name="signUp_Successfully">Sign up </string>
    <string name="processing">Processing</string>
    <string name="text_PasswordRecovery">Password Recovery </string>
    <string name="string_PasswordRecovery">Type your email in the box below</string>
    <string name="request_NewPassword">Request new Password</string>
    <string name="text_NotMember">Haven\'t had account yet ?</string>
    <string name="textclick_SignUpHere"><u>Sign Up Here</u></string>
    <string name="error_EmailType">Invalid Email type, please check it !</string>
    <string name="toast_PasswordResetSuccessfully">Check your email to complete reseting password.</string>
    <string name="error_user_info">Fail, something wrong</string>
    <string name="warning_user_password">At least 6 character</string>
    <!--end strings for authentication layout-->

    <string name="currency_type"> đ</string>

    <!--item of transaction-->
    <string name="ts_income">Khoản thu</string>
    <string name="ts_outcome">Khoản chi</string>
    <string name="ts_reward">Thưởng</string>
    <string name="ts_awarded">Được tặng</string>
    <string name="ts_sale">Bán đồ</string>
    <string name="ts_salary">Lương</string>
    <string name="ts_income_other">Khoản thu khác</string>
    <string name="ts_interest">Tiền lãi</string>
    <string name="ts_deposit">Gửi tiền</string>
    <string name="ts_friend_n_love">Bạn bè &amp; người yêu</string>
    <string name="ts_insurance">Bảo hiểm</string>
    <string name="ts_fee">Chi phí</string>
    <string name="ts_transport">Di chuyển</string>
    <string name="ts_travel">Du lịch</string>
    <string name="ts_home">Gia đình</string>
    <string name="ts_education">Giáo dục</string>
    <string name="ts_entertainment">Giải trí</string>
    <string name="ts_bill">Hoá đơn &amp; tiện ích</string>
    <string name="ts_business">Kinh doanh</string>
    <string name="ts_shopping">Mua sắm</string>
    <string name="ts_gift">Quà tặng &amp; Quyên góp</string>
    <string name="ts_withdraw">Rút tiền</string>
    <string name="ts_health">Sức khoẻ</string>
    <string name="ts_eating">Ăn uống</string>
    <string name="ts_invest">Đầu tư</string>
    <string name="ts_outcome_other">Khoản chi khác</string>
    <string name="ts_income_max">Khoản thu lớn nhất</string>
    <string name="ts_outcome_max">Khoản chi lớn nhất</string>
    <string name="ts_income_grouped">Khoản thu xếp theo nhóm</string>
    <string name="ts_outcome_grouped">Khoản chi xếp theo nhóm</string>
    <string name="ts_income_altogether">Tổng lượng thu</string>
    <string name="ts_outcome_altogether">Tổng lượng chi</string>
    <string name="ts_savemoney">Tiết kiệm</string>

    <!--Phương thức thanh toán -->
    <string name="pttt_creditcard">Thẻ tín dụng</string>
    <string name="pttt_cash">Tiền mặt</string>
    <string name="pttt_electronicwallet">Ví điện tử</string>

    <string name="ts_lend">Cho vay</string>
    <string name="ts_pay">Trả nợ</string>

    <string name="report">Báo cáo</string>
    <string name="txt_allIncome">Tổng lượng thu : </string>
    <string name="txt_allOutcome">Tổng lượng chi : </string>

    <!--Strings for Bill-->
    <string name="bill_enter_amount">Nhập số tiền</string>
    <string name="bill_select_group">Chọn nhóm</string>
    <string name="bill_note">Ghi chú</string>
    <string name="bill_today">Hôm nay</string>
    <string name="bill_payment_form">Chọn hình thức thanh toán</string>
    <string name="bill_calendar">Calendar</string>
    <string name="bill_0">0</string>
    <string name="bill_symbol_group">Biểu tượng nhóm</string>
    <string name="bill_symbol">Biểu tượng hóa đơn</string>
    <string name="bill_delete">Delete</string>
    <string name="bill_remain">Các hóa đơn còn lại</string>
    <string name="bill_about">SỐ DƯ</string>
    <string name="bill_this_term">Kì này</string>
    <string name="bill_payed">Các hóa đơn đã thanh toán</string>

</resources>
