<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainBill.View.AddBillActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarAddBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textLoginColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@color/colorLayoutTaskbar"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="64dp"
            android:textSize="32sp"
            android:ems="10"
            android:hint="@string/bill_enter_amount"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgIc"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/icon_not_selected"
                android:contentDescription="@string/bill_symbol_group" />

            <EditText
                android:id="@+id/editGroup"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/bill_select_group"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_truong_edit1"
                android:contentDescription="@string/bill_note" />

            <EditText
                android:id="@+id/editNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/bill_note"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_bk_events"
                android:contentDescription="@string/bill_calendar" />

            <EditText
                android:id="@+id/editRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/bill_today"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgFormDetail"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/wallet_picture"
                android:contentDescription="@string/bill_payment_form" />

            <EditText
                android:id="@+id/editFormDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/bill_payment_form"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLayoutTaskbar"
        android:orientation="horizontal" />

</LinearLayout>