<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_simple2"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Authentication.LogInActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/logo_main_text"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp">


        <EditText
            android:id="@+id/edtEmailLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/textLoginColor"
            android:drawableStart="@drawable/ic_perm_identity_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textLoginColor"
            android:textColorHint="@color/textLoginColor"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edtPasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/textLoginColor"
            android:drawableStart="@drawable/ic_lock_outline_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/textLoginColor"
            android:textColorHint="@color/textLoginColor"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_button"
            android:drawableStart="@drawable/ic_exit_to_app_white_24dp"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/login"
            android:textColor="@color/textLoginColor" />

        <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:background="@color/backgroundLoginGoogle"
            android:drawableStart="@drawable/icon_google"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/loginGoogle"
            android:textAllCaps="false"
            android:textColor="@color/textLoginColor"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/retrievePassword"
                android:textColor="@color/textLoginColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/signUp"
                android:textColor="@color/textLoginColor"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>